# starting-ragchatbot-codebase

./: .env.example  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  backend-tool-refactor.md  codex-pr-smoke-test.md  frontend-changes.md  pyproject.toml
.agents/skills/implement-frontend-feature/: SKILL.md
backend/: ai_generator.py  app.py  config.py  rag_system.py  search_tools.py  session_manager.py  vector_store.py
backend/tests/: conftest.py  test_ai_generator_course_search_tool_calling.py  test_api_endpoints.py  test_course_outline_tool_execute.py  test_course_search_tool_execute.py  test_rag_content_query_flow.py
frontend/: index.html  script.js  style.css
tests/: test_ai_generator_prompt.py  test_rag_system_tools.py  test_search_tools.py  test_session_api.py  test_session_manager.py
